--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <center>
     <h3> ProFile Info</h3>
-    <p >Name : <h5><i> BUI NGOC HUY </i></h5>   </p>
+    <p >Name : <big><i> BUI NGOC HUY </i></big>   </p>
     <p> Age : 22 </p>
     <p> Job : <i> Software Engineering </i></p>
     <p> Hobbits : <mark> Da bong </mark></p>
