--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <p> Age : 22 </p>
     <p> Job : <i> Software Engineering </i></p>
     <p> Hobbits : <mark> Da bong </mark></p>
+    <h3> Avatar </h3>
+    <img width="300" src="./image/avatar.jpg" alt="huy avatar"
 
 
 
