--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <p> Job : <i> Software Engineering </i></p>
     <p> Hobbits : <mark> Da bong </mark></p>
     <h3> Avatar </h3>
-    <img width="300" src="./image/avatar.jpg" alt="huy avatar" 
+    <img width="300" src="./image/avatar.jpg" alt="huy avatar" >
+
     <p> <a href="http://fb.com/huy.b98" target="_blank" rel="noopener noreferrer"> My Facebook </a></p>
-
-
 
 </center>
 </body>
