--- a/index.html
+++ b/index.html
@@ -4,10 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- ===== CSS ===== -->
     <link rel="stylesheet" href="./assets/css/style.css">
+
+    <!-- ===== BOX ICON ===== -->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+
     <title>HuyBN Personal Web</title>
 </head>
-<body>
-    <script src="./assets/js/main.js"></script>
-</body>
+    <body>
+        <!-- ===== HEADER ===== -->
+        <header class="header">
+            <nav class="nav">
+                <div>
+                    <a href="#" class="nav__name">HuyBN</a>
+                </div>
+
+                <div class="nav__menu">
+                    <ul class="nav__list">
+                        <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
+                        <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+                        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
+                        <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+                        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                    </ul>
+                </div>
+
+                <!-- Toggle menu -->
+                <!-- <div class="nav__toggle" id="nav-toggle">
+                    <i class='bx bx-menu'></i>
+                </div> -->
+            </nav>
+        </header>
+        <!-- ===== HOME ===== -->
+
+        <!-- ===== ABOUT ===== -->
+
+        <!-- ===== SKILLS ===== -->
+
+        <!-- ===== CONTACT ===== -->
+
+        <!-- ===== FOOTER ===== -->
+
+        <!--===== SCROLL REVEAL =====-->
+        <script src="https://unpkg.com/scrollreveal"></script>
+
+        <!--===== MAIN JS =====-->
+        <script src="./assets/js/main.js"></script>
+    </body>
 </html>
