--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <!-- ===== HEADER ===== -->
         <header class="header">
-            <nav class="nav">
+            <nav class="nav container">
                 <div>
                     <a href="#" class="nav__name">HuyBN</a>
                 </div>
@@ -37,18 +37,53 @@
                 </div> -->
             </nav>
         </header>
-        <!-- ===== HOME ===== -->
+        <main class="main">
+            <!-- ===== HOME ===== -->
+            <section class="home container">
+                <div class="home__container">
+                    <h1 class="home__title">Hi, I'm HuyBN</h1>
 
-        <!-- ===== ABOUT ===== -->
+                    <div class="home__icon">
+                        <a href="https://www.fb.com/huy.b98/" target="_blank"><i class='bx bxl-facebook-circle'></i></a>
+                        <a href="https://www.instagram.com/huy.b.n/" target="_blank"><i class='bx bxl-instagram' ></i></a>
+                        <a href="https://github.com/huybui98" target="_blank"><i class='bx bxl-github' ></i></a>
+                    </div>
+                </div>
 
-        <!-- ===== SKILLS ===== -->
+                <img src="./assets/img/Ảnh.PNG" alt="me" class="home__img">
+            </section>
 
-        <!-- ===== CONTACT ===== -->
+            <!-- ===== ABOUT ===== -->
+            <section class="about" id="about">
+                <h2 class="about__title">About</h2>
+
+                <div class="about__container">
+                    <div class="about__img">
+                        <img src="./assets/img/Ảnh.PNG" alt="me" class="about__img-img">
+                    </div>
+
+                    <div>
+                        <h2 class="about__subtitle">I'm Huy Bui Ngoc</h2>
+                        <p class="about__text">I'm a front-end web developer. Web development is my passion and I want to become a good developer in the future.</p>
+
+                        <div class="about__icon">
+                            <a href="https://www.fb.com/huy.b98/" target="_blank"><i class='bx bxl-facebook-circle'></i></a>
+                            <a href="https://www.instagram.com/huy.b.n/" target="_blank"><i class='bx bxl-instagram' ></i></a>
+                            <a href="https://github.com/huybui98" target="_blank"><i class='bx bxl-github' ></i></a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- ===== SKILLS ===== -->
+
+            <!-- ===== CONTACT ===== -->
+
+        </main>
 
         <!-- ===== FOOTER ===== -->
 
         <!--===== SCROLL REVEAL =====-->
-        <script src="https://unpkg.com/scrollreveal"></script>
+        <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
 
         <!--===== MAIN JS =====-->
         <script src="./assets/js/main.js"></script>
